parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> oprex
Rule 1     oprex -> <empty>
Rule 2     oprex -> WHITESPACE
Rule 3     oprex -> NEWLINE
Rule 4     oprex -> NEWLINE root_expression
Rule 5     oprex -> NEWLINE INDENT root_expression DEDENT
Rule 6     root_expression -> global_flags
Rule 7     root_expression -> expression
Rule 8     root_expression -> global_flags expression
Rule 9     global_flags -> LPAREN FLAGSET RPAREN NEWLINE
Rule 10    expression -> expr optional_subblock
Rule 11    expr -> string_expr
Rule 12    expr -> lookup_expr
Rule 13    expr -> orblock_expr
Rule 14    expr -> flagged_expr
Rule 15    expr -> lookaround_expr
Rule 16    expr -> quantified_expr
Rule 17    string_expr -> STRING NEWLINE
Rule 18    string_expr -> STRING str_b NEWLINE
Rule 19    string_expr -> str_b STRING NEWLINE
Rule 20    string_expr -> str_b STRING str_b NEWLINE
Rule 21    str_b -> DOT
Rule 22    str_b -> UNDERSCORE
Rule 23    quantified_expr -> quantifier WHITESPACE expr
Rule 24    quantified_expr -> quantifier COLON charclass
Rule 25    quantifier -> repeat_N_times
Rule 26    quantifier -> repeat_range
Rule 27    repeat_N_times -> AT NUMBER of
Rule 28    repeat_N_times -> NUMBER of
Rule 29    repeat_range -> AT numrange of
Rule 30    repeat_range -> numrange backtrack MINUS of
Rule 31    repeat_range -> NUMBER backtrack PLUS DOT DOT of
Rule 32    repeat_range -> NUMBER backtrack PLUS DOT DOT NUMBER of
Rule 33    backtrack -> WHITESPACE LT LT
Rule 34    of -> WHITESPACE OF
Rule 35    numrange -> NUMBER DOT DOT
Rule 36    numrange -> NUMBER DOT DOT NUMBER
Rule 37    flagged_expr -> scoped_flags expr
Rule 38    scoped_flags -> LPAREN FLAGSET RPAREN WHITESPACE
Rule 39    orblock_expr -> BEGIN_ORBLOCK NEWLINE oritems END_OF_ORBLOCK
Rule 40    oritems -> oritem
Rule 41    oritems -> oritem oritems
Rule 42    oritem -> or condition WHITESPACE QUESTMARK WHITESPACE expr
Rule 43    oritem -> or condition WHITESPACE QUESTMARK NEWLINE
Rule 44    oritem -> or expr
Rule 45    oritem -> or NEWLINE
Rule 46    condition -> LBRACKET VARNAME RBRACKET
Rule 47    or -> BAR
Rule 48    lookaround_expr -> BEGIN_LOOKAROUND NEWLINE lookitems END_OF_LOOKAROUND
Rule 49    lookitems -> lookitem NEWLINE
Rule 50    lookitems -> lookitem NEWLINE lookitems
Rule 51    lookitem -> BAR lookup GT
Rule 52    lookitem -> BAR EXCLAMARK lookup GT
Rule 53    lookitem -> LT lookup BAR
Rule 54    lookitem -> LT EXCLAMARK lookup BAR
Rule 55    lookitem -> BAR lookup BAR
Rule 56    lookup_expr -> lookup NEWLINE
Rule 57    lookup -> lookup_item
Rule 58    lookup -> chain_begin lookup_chain chain_end
Rule 59    chain_begin -> AT SLASH SLASH
Rule 60    chain_begin -> AT DOT SLASH
Rule 61    chain_begin -> AT SLASH
Rule 62    chain_begin -> SLASH SLASH
Rule 63    chain_begin -> DOT SLASH
Rule 64    chain_begin -> SLASH
Rule 65    chain_end -> SLASH
Rule 66    chain_end -> DOT
Rule 67    chain_end -> <empty>
Rule 68    lookup_chain -> lookup_item SLASH
Rule 69    lookup_chain -> lookup_item SLASH lookup_chain
Rule 70    lookup_item -> lookup_type
Rule 71    lookup_item -> lookup_type QUESTMARK
Rule 72    lookup_type -> variable_lookup
Rule 73    lookup_type -> negated_lookup
Rule 74    lookup_type -> backreference
Rule 75    variable_lookup -> VARNAME
Rule 76    variable_lookup -> FAIL
Rule 77    negated_lookup -> NON VARNAME
Rule 78    backreference -> EQUALSIGN VARNAME
Rule 79    charclass -> charitems NEWLINE
Rule 80    charitems -> WHITESPACE charitem
Rule 81    charitems -> WHITESPACE charitem charitems
Rule 82    charitem -> ranged_char
Rule 83    charitem -> single_char
Rule 84    charitem -> period_char
Rule 85    ranged_char -> CHAR DOT DOT CHAR
Rule 86    period_char -> DOT
Rule 87    single_char -> CHAR
Rule 88    optional_subblock -> begin_subblock definitions end_subblock
Rule 89    optional_subblock -> <empty>
Rule 90    begin_subblock -> INDENT
Rule 91    end_subblock -> DEDENT
Rule 92    definitions -> definition
Rule 93    definitions -> definition definitions
Rule 94    definition -> assignment
Rule 95    definition -> GLOBALMARK assignment
Rule 96    assignment -> declaration equals assignment
Rule 97    assignment -> declaration equals expression
Rule 98    assignment -> declaration COLON charclass optional_subblock
Rule 99    equals -> EQUALSIGN
Rule 100   equals -> WHITESPACE EQUALSIGN
Rule 101   equals -> EQUALSIGN WHITESPACE
Rule 102   equals -> WHITESPACE EQUALSIGN WHITESPACE
Rule 103   declaration -> VARNAME
Rule 104   declaration -> LBRACKET VARNAME RBRACKET

Terminals, with rules where they appear

AT                   : 27 29 59 60 61
BAR                  : 47 51 52 53 54 55 55
BEGIN_LOOKAROUND     : 48
BEGIN_ORBLOCK        : 39
CHAR                 : 85 85 87
COLON                : 24 98
DEDENT               : 5 91
DOT                  : 21 31 31 32 32 35 35 36 36 60 63 66 85 85 86
END_OF_LOOKAROUND    : 48
END_OF_ORBLOCK       : 39
EQUALSIGN            : 78 99 100 101 102
EXCLAMARK            : 52 54
FAIL                 : 76
FLAGSET              : 9 38
GLOBALMARK           : 95
GT                   : 51 52
INDENT               : 5 90
LBRACKET             : 46 104
LPAREN               : 9 38
LT                   : 33 33 53 54
MINUS                : 30
NEWLINE              : 3 4 5 9 17 18 19 20 39 43 45 48 49 50 56 79
NON                  : 77
NUMBER               : 27 28 31 32 32 35 36 36
OF                   : 34
PLUS                 : 31 32
QUESTMARK            : 42 43 71
RBRACKET             : 46 104
RPAREN               : 9 38
SLASH                : 59 59 60 61 62 62 63 64 65 68 69
STRING               : 17 18 19 20
UNDERSCORE           : 22
VARNAME              : 46 75 77 78 103 104
WHITESPACE           : 2 23 33 34 38 42 42 43 80 81 100 101 102 102
error                : 

Nonterminals, with rules where they appear

assignment           : 94 95 96
backreference        : 74
backtrack            : 30 31 32
begin_subblock       : 88
chain_begin          : 58
chain_end            : 58
charclass            : 24 98
charitem             : 80 81
charitems            : 79 81
condition            : 42 43
declaration          : 96 97 98
definition           : 92 93
definitions          : 88 93
end_subblock         : 88
equals               : 96 97
expr                 : 10 23 37 42 44
expression           : 7 8 97
flagged_expr         : 14
global_flags         : 6 8
lookaround_expr      : 15
lookitem             : 49 50
lookitems            : 48 50
lookup               : 51 52 53 54 55 56
lookup_chain         : 58 69
lookup_expr          : 12
lookup_item          : 57 68 69
lookup_type          : 70 71
negated_lookup       : 73
numrange             : 29 30
of                   : 27 28 29 30 31 32
oprex                : 0
optional_subblock    : 10 98
or                   : 42 43 44 45
orblock_expr         : 13
oritem               : 40 41
oritems              : 39 41
period_char          : 84
quantified_expr      : 16
quantifier           : 23 24
ranged_char          : 82
repeat_N_times       : 25
repeat_range         : 26
root_expression      : 4 5
scoped_flags         : 37
single_char          : 83
str_b                : 18 19 20 20
string_expr          : 11
variable_lookup      : 72

Parsing method: LALR

state 0

    (0) S' -> . oprex
    (1) oprex -> .
    (2) oprex -> . WHITESPACE
    (3) oprex -> . NEWLINE
    (4) oprex -> . NEWLINE root_expression
    (5) oprex -> . NEWLINE INDENT root_expression DEDENT

    $end            reduce using rule 1 (oprex -> .)
    WHITESPACE      shift and go to state 2
    NEWLINE         shift and go to state 3

    oprex                          shift and go to state 1

state 1

    (0) S' -> oprex .



state 2

    (2) oprex -> WHITESPACE .

    $end            reduce using rule 2 (oprex -> WHITESPACE .)


state 3

    (3) oprex -> NEWLINE .
    (4) oprex -> NEWLINE . root_expression
    (5) oprex -> NEWLINE . INDENT root_expression DEDENT
    (6) root_expression -> . global_flags
    (7) root_expression -> . expression
    (8) root_expression -> . global_flags expression
    (9) global_flags -> . LPAREN FLAGSET RPAREN NEWLINE
    (10) expression -> . expr optional_subblock
    (11) expr -> . string_expr
    (12) expr -> . lookup_expr
    (13) expr -> . orblock_expr
    (14) expr -> . flagged_expr
    (15) expr -> . lookaround_expr
    (16) expr -> . quantified_expr
    (17) string_expr -> . STRING NEWLINE
    (18) string_expr -> . STRING str_b NEWLINE
    (19) string_expr -> . str_b STRING NEWLINE
    (20) string_expr -> . str_b STRING str_b NEWLINE
    (56) lookup_expr -> . lookup NEWLINE
    (39) orblock_expr -> . BEGIN_ORBLOCK NEWLINE oritems END_OF_ORBLOCK
    (37) flagged_expr -> . scoped_flags expr
    (48) lookaround_expr -> . BEGIN_LOOKAROUND NEWLINE lookitems END_OF_LOOKAROUND
    (23) quantified_expr -> . quantifier WHITESPACE expr
    (24) quantified_expr -> . quantifier COLON charclass
    (21) str_b -> . DOT
    (22) str_b -> . UNDERSCORE
    (57) lookup -> . lookup_item
    (58) lookup -> . chain_begin lookup_chain chain_end
    (38) scoped_flags -> . LPAREN FLAGSET RPAREN WHITESPACE
    (25) quantifier -> . repeat_N_times
    (26) quantifier -> . repeat_range
    (70) lookup_item -> . lookup_type
    (71) lookup_item -> . lookup_type QUESTMARK
    (59) chain_begin -> . AT SLASH SLASH
    (60) chain_begin -> . AT DOT SLASH
    (61) chain_begin -> . AT SLASH
    (62) chain_begin -> . SLASH SLASH
    (63) chain_begin -> . DOT SLASH
    (64) chain_begin -> . SLASH
    (27) repeat_N_times -> . AT NUMBER of
    (28) repeat_N_times -> . NUMBER of
    (29) repeat_range -> . AT numrange of
    (30) repeat_range -> . numrange backtrack MINUS of
    (31) repeat_range -> . NUMBER backtrack PLUS DOT DOT of
    (32) repeat_range -> . NUMBER backtrack PLUS DOT DOT NUMBER of
    (72) lookup_type -> . variable_lookup
    (73) lookup_type -> . negated_lookup
    (74) lookup_type -> . backreference
    (35) numrange -> . NUMBER DOT DOT
    (36) numrange -> . NUMBER DOT DOT NUMBER
    (75) variable_lookup -> . VARNAME
    (76) variable_lookup -> . FAIL
    (77) negated_lookup -> . NON VARNAME
    (78) backreference -> . EQUALSIGN VARNAME

    $end            reduce using rule 3 (oprex -> NEWLINE .)
    INDENT          shift and go to state 32
    LPAREN          shift and go to state 26
    STRING          shift and go to state 21
    BEGIN_ORBLOCK   shift and go to state 16
    BEGIN_LOOKAROUND shift and go to state 24
    DOT             shift and go to state 14
    UNDERSCORE      shift and go to state 12
    AT              shift and go to state 25
    SLASH           shift and go to state 36
    NUMBER          shift and go to state 10
    VARNAME         shift and go to state 7
    FAIL            shift and go to state 27
    NON             shift and go to state 30
    EQUALSIGN       shift and go to state 29

    scoped_flags                   shift and go to state 20
    repeat_N_times                 shift and go to state 4
    flagged_expr                   shift and go to state 5
    global_flags                   shift and go to state 6
    repeat_range                   shift and go to state 8
    backreference                  shift and go to state 9
    chain_begin                    shift and go to state 11
    lookup_expr                    shift and go to state 13
    string_expr                    shift and go to state 39
    lookaround_expr                shift and go to state 35
    lookup_item                    shift and go to state 17
    lookup                         shift and go to state 18
    negated_lookup                 shift and go to state 19
    orblock_expr                   shift and go to state 22
    numrange                       shift and go to state 23
    quantifier                     shift and go to state 28
    quantified_expr                shift and go to state 31
    expr                           shift and go to state 33
    lookup_type                    shift and go to state 34
    str_b                          shift and go to state 15
    expression                     shift and go to state 37
    root_expression                shift and go to state 38
    variable_lookup                shift and go to state 40

state 4

    (25) quantifier -> repeat_N_times .

    WHITESPACE      reduce using rule 25 (quantifier -> repeat_N_times .)
    COLON           reduce using rule 25 (quantifier -> repeat_N_times .)


state 5

    (14) expr -> flagged_expr .

    INDENT          reduce using rule 14 (expr -> flagged_expr .)
    $end            reduce using rule 14 (expr -> flagged_expr .)
    DEDENT          reduce using rule 14 (expr -> flagged_expr .)
    GLOBALMARK      reduce using rule 14 (expr -> flagged_expr .)
    VARNAME         reduce using rule 14 (expr -> flagged_expr .)
    LBRACKET        reduce using rule 14 (expr -> flagged_expr .)
    BAR             reduce using rule 14 (expr -> flagged_expr .)
    END_OF_ORBLOCK  reduce using rule 14 (expr -> flagged_expr .)


state 6

    (6) root_expression -> global_flags .
    (8) root_expression -> global_flags . expression
    (10) expression -> . expr optional_subblock
    (11) expr -> . string_expr
    (12) expr -> . lookup_expr
    (13) expr -> . orblock_expr
    (14) expr -> . flagged_expr
    (15) expr -> . lookaround_expr
    (16) expr -> . quantified_expr
    (17) string_expr -> . STRING NEWLINE
    (18) string_expr -> . STRING str_b NEWLINE
    (19) string_expr -> . str_b STRING NEWLINE
    (20) string_expr -> . str_b STRING str_b NEWLINE
    (56) lookup_expr -> . lookup NEWLINE
    (39) orblock_expr -> . BEGIN_ORBLOCK NEWLINE oritems END_OF_ORBLOCK
    (37) flagged_expr -> . scoped_flags expr
    (48) lookaround_expr -> . BEGIN_LOOKAROUND NEWLINE lookitems END_OF_LOOKAROUND
    (23) quantified_expr -> . quantifier WHITESPACE expr
    (24) quantified_expr -> . quantifier COLON charclass
    (21) str_b -> . DOT
    (22) str_b -> . UNDERSCORE
    (57) lookup -> . lookup_item
    (58) lookup -> . chain_begin lookup_chain chain_end
    (38) scoped_flags -> . LPAREN FLAGSET RPAREN WHITESPACE
    (25) quantifier -> . repeat_N_times
    (26) quantifier -> . repeat_range
    (70) lookup_item -> . lookup_type
    (71) lookup_item -> . lookup_type QUESTMARK
    (59) chain_begin -> . AT SLASH SLASH
    (60) chain_begin -> . AT DOT SLASH
    (61) chain_begin -> . AT SLASH
    (62) chain_begin -> . SLASH SLASH
    (63) chain_begin -> . DOT SLASH
    (64) chain_begin -> . SLASH
    (27) repeat_N_times -> . AT NUMBER of
    (28) repeat_N_times -> . NUMBER of
    (29) repeat_range -> . AT numrange of
    (30) repeat_range -> . numrange backtrack MINUS of
    (31) repeat_range -> . NUMBER backtrack PLUS DOT DOT of
    (32) repeat_range -> . NUMBER backtrack PLUS DOT DOT NUMBER of
    (72) lookup_type -> . variable_lookup
    (73) lookup_type -> . negated_lookup
    (74) lookup_type -> . backreference
    (35) numrange -> . NUMBER DOT DOT
    (36) numrange -> . NUMBER DOT DOT NUMBER
    (75) variable_lookup -> . VARNAME
    (76) variable_lookup -> . FAIL
    (77) negated_lookup -> . NON VARNAME
    (78) backreference -> . EQUALSIGN VARNAME

    $end            reduce using rule 6 (root_expression -> global_flags .)
    DEDENT          reduce using rule 6 (root_expression -> global_flags .)
    STRING          shift and go to state 21
    BEGIN_ORBLOCK   shift and go to state 16
    BEGIN_LOOKAROUND shift and go to state 24
    DOT             shift and go to state 14
    UNDERSCORE      shift and go to state 12
    LPAREN          shift and go to state 41
    AT              shift and go to state 25
    SLASH           shift and go to state 36
    NUMBER          shift and go to state 10
    VARNAME         shift and go to state 7
    FAIL            shift and go to state 27
    NON             shift and go to state 30
    EQUALSIGN       shift and go to state 29

    scoped_flags                   shift and go to state 20
    repeat_N_times                 shift and go to state 4
    flagged_expr                   shift and go to state 5
    repeat_range                   shift and go to state 8
    backreference                  shift and go to state 9
    chain_begin                    shift and go to state 11
    lookup_expr                    shift and go to state 13
    string_expr                    shift and go to state 39
    lookaround_expr                shift and go to state 35
    lookup_item                    shift and go to state 17
    lookup                         shift and go to state 18
    negated_lookup                 shift and go to state 19
    orblock_expr                   shift and go to state 22
    numrange                       shift and go to state 23
    quantifier                     shift and go to state 28
    quantified_expr                shift and go to state 31
    expr                           shift and go to state 33
    lookup_type                    shift and go to state 34
    str_b                          shift and go to state 15
    expression                     shift and go to state 42
    variable_lookup                shift and go to state 40

state 7

    (75) variable_lookup -> VARNAME .

    QUESTMARK       reduce using rule 75 (variable_lookup -> VARNAME .)
    SLASH           reduce using rule 75 (variable_lookup -> VARNAME .)
    NEWLINE         reduce using rule 75 (variable_lookup -> VARNAME .)
    GT              reduce using rule 75 (variable_lookup -> VARNAME .)
    BAR             reduce using rule 75 (variable_lookup -> VARNAME .)


state 8

    (26) quantifier -> repeat_range .

    WHITESPACE      reduce using rule 26 (quantifier -> repeat_range .)
    COLON           reduce using rule 26 (quantifier -> repeat_range .)


state 9

    (74) lookup_type -> backreference .

    QUESTMARK       reduce using rule 74 (lookup_type -> backreference .)
    BAR             reduce using rule 74 (lookup_type -> backreference .)
    NEWLINE         reduce using rule 74 (lookup_type -> backreference .)
    SLASH           reduce using rule 74 (lookup_type -> backreference .)
    GT              reduce using rule 74 (lookup_type -> backreference .)


state 10

    (28) repeat_N_times -> NUMBER . of
    (31) repeat_range -> NUMBER . backtrack PLUS DOT DOT of
    (32) repeat_range -> NUMBER . backtrack PLUS DOT DOT NUMBER of
    (35) numrange -> NUMBER . DOT DOT
    (36) numrange -> NUMBER . DOT DOT NUMBER
    (34) of -> . WHITESPACE OF
    (33) backtrack -> . WHITESPACE LT LT

    DOT             shift and go to state 46
    WHITESPACE      shift and go to state 43

    of                             shift and go to state 45
    backtrack                      shift and go to state 44

state 11

    (58) lookup -> chain_begin . lookup_chain chain_end
    (68) lookup_chain -> . lookup_item SLASH
    (69) lookup_chain -> . lookup_item SLASH lookup_chain
    (70) lookup_item -> . lookup_type
    (71) lookup_item -> . lookup_type QUESTMARK
    (72) lookup_type -> . variable_lookup
    (73) lookup_type -> . negated_lookup
    (74) lookup_type -> . backreference
    (75) variable_lookup -> . VARNAME
    (76) variable_lookup -> . FAIL
    (77) negated_lookup -> . NON VARNAME
    (78) backreference -> . EQUALSIGN VARNAME

    VARNAME         shift and go to state 7
    FAIL            shift and go to state 27
    NON             shift and go to state 30
    EQUALSIGN       shift and go to state 29

    lookup_chain                   shift and go to state 47
    lookup_type                    shift and go to state 34
    backreference                  shift and go to state 9
    lookup_item                    shift and go to state 48
    negated_lookup                 shift and go to state 19
    variable_lookup                shift and go to state 40

state 12

    (22) str_b -> UNDERSCORE .

    NEWLINE         reduce using rule 22 (str_b -> UNDERSCORE .)
    STRING          reduce using rule 22 (str_b -> UNDERSCORE .)


state 13

    (12) expr -> lookup_expr .

    INDENT          reduce using rule 12 (expr -> lookup_expr .)
    $end            reduce using rule 12 (expr -> lookup_expr .)
    DEDENT          reduce using rule 12 (expr -> lookup_expr .)
    GLOBALMARK      reduce using rule 12 (expr -> lookup_expr .)
    VARNAME         reduce using rule 12 (expr -> lookup_expr .)
    LBRACKET        reduce using rule 12 (expr -> lookup_expr .)
    BAR             reduce using rule 12 (expr -> lookup_expr .)
    END_OF_ORBLOCK  reduce using rule 12 (expr -> lookup_expr .)


state 14

    (21) str_b -> DOT .
    (63) chain_begin -> DOT . SLASH

    STRING          reduce using rule 21 (str_b -> DOT .)
    SLASH           shift and go to state 49


state 15

    (19) string_expr -> str_b . STRING NEWLINE
    (20) string_expr -> str_b . STRING str_b NEWLINE

    STRING          shift and go to state 50


state 16

    (39) orblock_expr -> BEGIN_ORBLOCK . NEWLINE oritems END_OF_ORBLOCK

    NEWLINE         shift and go to state 51


state 17

    (57) lookup -> lookup_item .

    NEWLINE         reduce using rule 57 (lookup -> lookup_item .)
    BAR             reduce using rule 57 (lookup -> lookup_item .)
    GT              reduce using rule 57 (lookup -> lookup_item .)


state 18

    (56) lookup_expr -> lookup . NEWLINE

    NEWLINE         shift and go to state 52


state 19

    (73) lookup_type -> negated_lookup .

    QUESTMARK       reduce using rule 73 (lookup_type -> negated_lookup .)
    BAR             reduce using rule 73 (lookup_type -> negated_lookup .)
    NEWLINE         reduce using rule 73 (lookup_type -> negated_lookup .)
    SLASH           reduce using rule 73 (lookup_type -> negated_lookup .)
    GT              reduce using rule 73 (lookup_type -> negated_lookup .)


state 20

    (37) flagged_expr -> scoped_flags . expr
    (11) expr -> . string_expr
    (12) expr -> . lookup_expr
    (13) expr -> . orblock_expr
    (14) expr -> . flagged_expr
    (15) expr -> . lookaround_expr
    (16) expr -> . quantified_expr
    (17) string_expr -> . STRING NEWLINE
    (18) string_expr -> . STRING str_b NEWLINE
    (19) string_expr -> . str_b STRING NEWLINE
    (20) string_expr -> . str_b STRING str_b NEWLINE
    (56) lookup_expr -> . lookup NEWLINE
    (39) orblock_expr -> . BEGIN_ORBLOCK NEWLINE oritems END_OF_ORBLOCK
    (37) flagged_expr -> . scoped_flags expr
    (48) lookaround_expr -> . BEGIN_LOOKAROUND NEWLINE lookitems END_OF_LOOKAROUND
    (23) quantified_expr -> . quantifier WHITESPACE expr
    (24) quantified_expr -> . quantifier COLON charclass
    (21) str_b -> . DOT
    (22) str_b -> . UNDERSCORE
    (57) lookup -> . lookup_item
    (58) lookup -> . chain_begin lookup_chain chain_end
    (38) scoped_flags -> . LPAREN FLAGSET RPAREN WHITESPACE
    (25) quantifier -> . repeat_N_times
    (26) quantifier -> . repeat_range
    (70) lookup_item -> . lookup_type
    (71) lookup_item -> . lookup_type QUESTMARK
    (59) chain_begin -> . AT SLASH SLASH
    (60) chain_begin -> . AT DOT SLASH
    (61) chain_begin -> . AT SLASH
    (62) chain_begin -> . SLASH SLASH
    (63) chain_begin -> . DOT SLASH
    (64) chain_begin -> . SLASH
    (27) repeat_N_times -> . AT NUMBER of
    (28) repeat_N_times -> . NUMBER of
    (29) repeat_range -> . AT numrange of
    (30) repeat_range -> . numrange backtrack MINUS of
    (31) repeat_range -> . NUMBER backtrack PLUS DOT DOT of
    (32) repeat_range -> . NUMBER backtrack PLUS DOT DOT NUMBER of
    (72) lookup_type -> . variable_lookup
    (73) lookup_type -> . negated_lookup
    (74) lookup_type -> . backreference
    (35) numrange -> . NUMBER DOT DOT
    (36) numrange -> . NUMBER DOT DOT NUMBER
    (75) variable_lookup -> . VARNAME
    (76) variable_lookup -> . FAIL
    (77) negated_lookup -> . NON VARNAME
    (78) backreference -> . EQUALSIGN VARNAME

    STRING          shift and go to state 21
    BEGIN_ORBLOCK   shift and go to state 16
    BEGIN_LOOKAROUND shift and go to state 24
    DOT             shift and go to state 14
    UNDERSCORE      shift and go to state 12
    LPAREN          shift and go to state 41
    AT              shift and go to state 25
    SLASH           shift and go to state 36
    NUMBER          shift and go to state 10
    VARNAME         shift and go to state 7
    FAIL            shift and go to state 27
    NON             shift and go to state 30
    EQUALSIGN       shift and go to state 29

    scoped_flags                   shift and go to state 20
    repeat_N_times                 shift and go to state 4
    flagged_expr                   shift and go to state 5
    repeat_range                   shift and go to state 8
    backreference                  shift and go to state 9
    chain_begin                    shift and go to state 11
    lookup_expr                    shift and go to state 13
    string_expr                    shift and go to state 39
    lookaround_expr                shift and go to state 35
    lookup_item                    shift and go to state 17
    lookup                         shift and go to state 18
    negated_lookup                 shift and go to state 19
    orblock_expr                   shift and go to state 22
    numrange                       shift and go to state 23
    quantifier                     shift and go to state 28
    quantified_expr                shift and go to state 31
    expr                           shift and go to state 53
    lookup_type                    shift and go to state 34
    str_b                          shift and go to state 15
    variable_lookup                shift and go to state 40

state 21

    (17) string_expr -> STRING . NEWLINE
    (18) string_expr -> STRING . str_b NEWLINE
    (21) str_b -> . DOT
    (22) str_b -> . UNDERSCORE

    NEWLINE         shift and go to state 54
    DOT             shift and go to state 55
    UNDERSCORE      shift and go to state 12

    str_b                          shift and go to state 56

state 22

    (13) expr -> orblock_expr .

    INDENT          reduce using rule 13 (expr -> orblock_expr .)
    $end            reduce using rule 13 (expr -> orblock_expr .)
    DEDENT          reduce using rule 13 (expr -> orblock_expr .)
    GLOBALMARK      reduce using rule 13 (expr -> orblock_expr .)
    VARNAME         reduce using rule 13 (expr -> orblock_expr .)
    LBRACKET        reduce using rule 13 (expr -> orblock_expr .)
    BAR             reduce using rule 13 (expr -> orblock_expr .)
    END_OF_ORBLOCK  reduce using rule 13 (expr -> orblock_expr .)


state 23

    (30) repeat_range -> numrange . backtrack MINUS of
    (33) backtrack -> . WHITESPACE LT LT

    WHITESPACE      shift and go to state 57

    backtrack                      shift and go to state 58

state 24

    (48) lookaround_expr -> BEGIN_LOOKAROUND . NEWLINE lookitems END_OF_LOOKAROUND

    NEWLINE         shift and go to state 59


state 25

    (59) chain_begin -> AT . SLASH SLASH
    (60) chain_begin -> AT . DOT SLASH
    (61) chain_begin -> AT . SLASH
    (27) repeat_N_times -> AT . NUMBER of
    (29) repeat_range -> AT . numrange of
    (35) numrange -> . NUMBER DOT DOT
    (36) numrange -> . NUMBER DOT DOT NUMBER

    SLASH           shift and go to state 62
    DOT             shift and go to state 63
    NUMBER          shift and go to state 60

    numrange                       shift and go to state 61

state 26

    (9) global_flags -> LPAREN . FLAGSET RPAREN NEWLINE
    (38) scoped_flags -> LPAREN . FLAGSET RPAREN WHITESPACE

    FLAGSET         shift and go to state 64


state 27

    (76) variable_lookup -> FAIL .

    QUESTMARK       reduce using rule 76 (variable_lookup -> FAIL .)
    SLASH           reduce using rule 76 (variable_lookup -> FAIL .)
    NEWLINE         reduce using rule 76 (variable_lookup -> FAIL .)
    GT              reduce using rule 76 (variable_lookup -> FAIL .)
    BAR             reduce using rule 76 (variable_lookup -> FAIL .)


state 28

    (23) quantified_expr -> quantifier . WHITESPACE expr
    (24) quantified_expr -> quantifier . COLON charclass

    WHITESPACE      shift and go to state 66
    COLON           shift and go to state 65


state 29

    (78) backreference -> EQUALSIGN . VARNAME

    VARNAME         shift and go to state 67


state 30

    (77) negated_lookup -> NON . VARNAME

    VARNAME         shift and go to state 68


state 31

    (16) expr -> quantified_expr .

    INDENT          reduce using rule 16 (expr -> quantified_expr .)
    $end            reduce using rule 16 (expr -> quantified_expr .)
    DEDENT          reduce using rule 16 (expr -> quantified_expr .)
    GLOBALMARK      reduce using rule 16 (expr -> quantified_expr .)
    VARNAME         reduce using rule 16 (expr -> quantified_expr .)
    LBRACKET        reduce using rule 16 (expr -> quantified_expr .)
    BAR             reduce using rule 16 (expr -> quantified_expr .)
    END_OF_ORBLOCK  reduce using rule 16 (expr -> quantified_expr .)


state 32

    (5) oprex -> NEWLINE INDENT . root_expression DEDENT
    (6) root_expression -> . global_flags
    (7) root_expression -> . expression
    (8) root_expression -> . global_flags expression
    (9) global_flags -> . LPAREN FLAGSET RPAREN NEWLINE
    (10) expression -> . expr optional_subblock
    (11) expr -> . string_expr
    (12) expr -> . lookup_expr
    (13) expr -> . orblock_expr
    (14) expr -> . flagged_expr
    (15) expr -> . lookaround_expr
    (16) expr -> . quantified_expr
    (17) string_expr -> . STRING NEWLINE
    (18) string_expr -> . STRING str_b NEWLINE
    (19) string_expr -> . str_b STRING NEWLINE
    (20) string_expr -> . str_b STRING str_b NEWLINE
    (56) lookup_expr -> . lookup NEWLINE
    (39) orblock_expr -> . BEGIN_ORBLOCK NEWLINE oritems END_OF_ORBLOCK
    (37) flagged_expr -> . scoped_flags expr
    (48) lookaround_expr -> . BEGIN_LOOKAROUND NEWLINE lookitems END_OF_LOOKAROUND
    (23) quantified_expr -> . quantifier WHITESPACE expr
    (24) quantified_expr -> . quantifier COLON charclass
    (21) str_b -> . DOT
    (22) str_b -> . UNDERSCORE
    (57) lookup -> . lookup_item
    (58) lookup -> . chain_begin lookup_chain chain_end
    (38) scoped_flags -> . LPAREN FLAGSET RPAREN WHITESPACE
    (25) quantifier -> . repeat_N_times
    (26) quantifier -> . repeat_range
    (70) lookup_item -> . lookup_type
    (71) lookup_item -> . lookup_type QUESTMARK
    (59) chain_begin -> . AT SLASH SLASH
    (60) chain_begin -> . AT DOT SLASH
    (61) chain_begin -> . AT SLASH
    (62) chain_begin -> . SLASH SLASH
    (63) chain_begin -> . DOT SLASH
    (64) chain_begin -> . SLASH
    (27) repeat_N_times -> . AT NUMBER of
    (28) repeat_N_times -> . NUMBER of
    (29) repeat_range -> . AT numrange of
    (30) repeat_range -> . numrange backtrack MINUS of
    (31) repeat_range -> . NUMBER backtrack PLUS DOT DOT of
    (32) repeat_range -> . NUMBER backtrack PLUS DOT DOT NUMBER of
    (72) lookup_type -> . variable_lookup
    (73) lookup_type -> . negated_lookup
    (74) lookup_type -> . backreference
    (35) numrange -> . NUMBER DOT DOT
    (36) numrange -> . NUMBER DOT DOT NUMBER
    (75) variable_lookup -> . VARNAME
    (76) variable_lookup -> . FAIL
    (77) negated_lookup -> . NON VARNAME
    (78) backreference -> . EQUALSIGN VARNAME

    LPAREN          shift and go to state 26
    STRING          shift and go to state 21
    BEGIN_ORBLOCK   shift and go to state 16
    BEGIN_LOOKAROUND shift and go to state 24
    DOT             shift and go to state 14
    UNDERSCORE      shift and go to state 12
    AT              shift and go to state 25
    SLASH           shift and go to state 36
    NUMBER          shift and go to state 10
    VARNAME         shift and go to state 7
    FAIL            shift and go to state 27
    NON             shift and go to state 30
    EQUALSIGN       shift and go to state 29
